2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/35_plus_string_string.deca
// Description :
//      opération + entre deux strings
// Resultats :
//    Erreur Contexteulle : ligne 11 : l'opération + n'est pas possible entre 'string' et 'string'
//
// Historique :
// cree le 10/01/2024

{
    // il n'ya pas de concaténation en deca 
    "bonjour" + "!!" ;
}